Update video link in 2017-12-11-BST260-EHR.markdown

--- a/_posts/2017-12-11-BST260-EHR.markdown
+++ b/_posts/2017-12-11-BST260-EHR.markdown
@@ -1,5 +1,6 @@
 ---
 title: "Data Science: Electronic Health Records"
+author: euniceyeh
 layout: post
 date: 2017-12-11
 tag: 
@@ -16,13 +17,11 @@ externalLink: false # include link if blog post already exists elsewhere
 description: "A quick summary post about my final Data Science project on EHR use."
 ---
 
-<iframe width="560" height="310" src="https://youtu.be/ukJsGriRPTc" frameborder="0.1" allowfullscreen></iframe>
-
----
-
 In the Fall semester of 2017, I took an introductory [Data Science](http://datasciencelabs.github.io/) course at [Harvard Chan](https://www.hsph.harvard.edu/) as a master's student in biostatistics. We mainly programmed in R and integrated that with Github. As a final group project for the course, I collaborated with two other master's students who are also interested in analyzing public health data to produce the following deliverables:
 
-- Two-minute screencast with narration (shown above).
+- Two-minute screencast with narration (watch below).
 - [Public website](https://katwang.github.io/BST-260-Final-Project-Site/) as a quick summary of our project and main findings, created using Github Pages.
 - Full [analysis report](https://euniceyeh.github.io/EHR-Project/) compiled in bookdown, detailing the entire project process.
 - Our project's [Github repo](https://github.com/euniceyeh/EHR-Project) contains all the code to the bookdown and analyses.
+
+<iframe width="560" height="310" src="https://youtu.be/ukJsGriRPTc" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" allowfullscreen="true"></iframe>
