--- a/_posts/2017-12-11-BST260-EHR.markdown
+++ b/_posts/2017-12-11-BST260-EHR.markdown
@@ -24,4 +24,4 @@ In the Fall semester of 2017, I took an introductory [Data Science](http://datas
 - Full [analysis report](https://euniceyeh.github.io/EHR-Project/) compiled in bookdown, detailing the entire project process.
 - Our project's [Github repo](https://github.com/euniceyeh/EHR-Project) contains all the code to the bookdown and analyses.
 
-<iframe width="560" height="310" src="https://youtu.be/ukJsGriRPTc" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" allowfullscreen="true"></iframe>
+<iframe width="560" height="310" src="https://www.youtube.com/embed/ukJsGriRPTc" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" allowfullscreen="true"></iframe>
